Fix alignment bug that seeProjects causes.

--- a/portfolio/src/main/webapp/style.css
+++ b/portfolio/src/main/webapp/style.css
@@ -91,6 +91,10 @@ button:hover {
     width: 600px;
 }
 
+#projects {
+    width: 560px;
+}
+
 #projects h3 {
     padding: 15px;
 }
